# face-check-in-flutter

./: .gitignore  Makefile  README.md  camera-optimize.md  face_detection_logs.txt  flavorizr.yaml  plan.md  pubspec.yaml  refactor.md
android/app/: build.gradle.kts  flavorizr.gradle.kts
bmad-agent/: ide-bmad-orchestrator.cfg.md
bmad-agent/checklists/: sprint-planning-checklist.md  (+1 more)
docs/: API_USAGE.md  DEVELOPMENT_GUIDELINES.md  FACE_DETECTION_NOTIFICATIONS.md  OWT_WEBSOCKET_INTEGRATION.md  PHASE_4_MANUAL_TESTING_VERIFICATION.md  PHASE_5_FINAL_INTEGRATION_REVIEW.md  PHASE_5_REAL_DEVICE_TESTING.md  WEBSOCKET_CONNECTION_TROUBLESHOOTING.md  api-reference.md  architecture.md  connection-manager-improvements.md  definition-of-done.md  deployment-guide.md  epic-1.md  epic-2.md  front-end-spec.md  front-end-style-guide.md  front-end-testing-strategy.md  front-end-user-flows.md  index.md  infra-deployment.md  operational-guidelines.md  prd.md  project-brief.md  project-structure.md  sequence-diagrams.md  sprint-metrics.md  sprint-planning.md  story-template-tdd-enhanced.md  tdd-workflow-guidelines.md  tech-stack.md
ios/: Podfile  YUVConverter.podspec
lib/: app.dart  flavors.dart  main.dart
scripts/: mock_websocket_server.js  mock_websocket_server.py  package.json  start_mock_server.sh  test_face_detection_server.py  test_owt_websocket.py  test_performance_on_device.md  test_websocket_connection.py  test_websocket_server.py
src/native/: CMakeLists.txt  yuv_converter.cpp  yuv_converter.h
test/: websocket_test.dart  widget_test.dart
yuv_converter/: .metadata  README.md  ffigen.yaml  pubspec.yaml
yuv_converter/src/: CMakeLists.txt  yuv_converter.c  yuv_converter.h
(+238 files in other folders)
